apps/base/home-assistant/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: home-assistant
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ha.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: cilium-gateway
  hostnames:
    - ha.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant
          port: 8123
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: code-server
  namespace: home-assistant
  annotations:
    external-dns.alpha.kubernetes.io/hostname: code-server.home.lewelly.com
  labels:
    app.kubernetes.io/part-of: home-infra
spec:
  parentRefs:
    - name: home-gateway
      namespace: cilium-gateway
  hostnames:
    - code-server.home.lewelly.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: home-assistant-code-server
          port: 12321
